cabal-version: 1.12
name:           mono-traversable-keys
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/mono-traversable-keys#readme>
homepage:       https://github.com/recursion-ninja/mono-traversable-keys#readme
bug-reports:    https://github.com/recursion-ninja/mono-traversable-keys/issues
author:         Alex Washburn
maintainer:     hackage@recursion.ninja
copyright:      2019 Alex Washburn
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/recursion-ninja/mono-traversable-keys

library
  exposed-modules:
      Data.MonoTraversable.Keys
  other-modules:
      Paths_mono_traversable_keys
  hs-source-dirs:
      src
  build-depends:
      array                >= 0.3.0.2 && < 1.0,
      base                 >= 4.5     && < 5.0,
      bytestring           >= 0.9     && < 1.0,   
      comonad              >= 4       && < 6.0,
      containers           >= 0.3     && < 0.7,
      free                 >= 4       && < 6.0,
      hashable             >= 1.1.2.3 && < 2.0,
      keys                 >= 3       && < 4.0,          
      mono-traversable     >= 1       && < 2.0,          
      semigroupoids        >= 5.2     && < 6.0,
      semigroups           >= 0.8.3.1 && < 1.0,
      tagged               >= 0.7.3   && < 1.0,
      text                 >= 0.11    && < 2.0,
      transformers         >= 0.2     && < 1.0,
      transformers-compat  >= 0.3     && < 1.0,
      unordered-containers >= 0.2.4   && < 1.0,
      vector               >= 0.10    && < 1.0,
      vector-algorithms    >= 0.6     && < 1.0,
      vector-instances     >= 3.4     && < 4.0
                
  default-language: Haskell2010
