cabal-version: 1.12
name:           mono-traversable-keys
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/mono-traversable-keys#readme>
homepage:       https://github.com/recursion-ninja/mono-traversable-keys#readme
bug-reports:    https://github.com/recursion-ninja/mono-traversable-keys/issues
author:         Alex Washburn
maintainer:     hackage@recursion.ninja
copyright:      2019 Alex Washburn
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/recursion-ninja/mono-traversable-keys

library

  build-depends:
      base                 >= 4.5     && < 5.0,
      bytestring           >= 0.9     && < 1.0,   
      containers           >= 0.3     && < 0.7,
      hashable             >= 1.2     && < 2.0,          
      keys                 >= 3       && < 4.0,          
      mono-traversable     >= 1       && < 2.0,          
      semigroups           >= 0.8.3.1 && < 1.0,
      text                 >= 0.11    && < 2.0,
      transformers         >= 0.2     && < 1.0,
      unordered-containers >= 0.2.4   && < 1.0,
      vector               >= 0.10    && < 1.0,
      vector-instances     >= 3.4     && < 4.0
                
  default-language:
      Haskell2010

  exposed-modules:
      Data.MonoTraversable.Keys

  ghc-options:
      -- Optimization flags
      -O2
      -fexpose-all-unfoldings
      -foptimal-applicative-do
      -fspecialize-aggressively
      -- Usability flags
      -fdiagnostics-color=always
      -fhide-source-paths
      -j
      -- Sanity check warnings
      -Wall
      -Wcompat
      -Wdodgy-foreign-imports
      -Wduplicate-exports
      -Wempty-enumerations
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-fields
      -Wmissing-home-modules
      -Wmissing-monadfail-instances
      -Wmissing-signatures
      -Wnoncanonical-monadfail-instances
      -Wnoncanonical-monad-instances
      -Wnoncanonical-monoid-instances
      -Woverflowed-literals
      -Woverlapping-patterns
      -Wredundant-constraints
      -Wsemigroup
      -Wtabs
      -Wunrecognised-warning-flags
      -Wunused-binds
      -Wunused-do-bind
      -Wunused-foralls
      -Wunused-imports
      -Wunused-matches
      -Wwrong-do-bind

  hs-source-dirs:
      src

