cabal-version: 1.12

name:           mono-traversable-keys
version:        0.1.0
synopsis:       Type classes for interacting with monomorphic containers with a key
category:       Containers, Data, Data Structures
build-type:     Simple
license:        BSD3
license-file:   LICENSE
copyright:      (c) Alex Washburn 2019
author:         Alex Washburn
maintainer:     hackage@recursion.ninja
homepage:       https://github.com/recursion-ninja/mono-traversable-keys#readme
bug-reports:    https://github.com/recursion-ninja/mono-traversable-keys/issues
description:
  This is the extension of two other popular packages,
  <http://hackage.haskell.org/package/mono-traversable mono-traversable> and
  <http://hackage.haskell.org/package/keys keys>,
  designed to provided the functionality of the @keys@ package to the monomorphic
  containers enhanced by the @mono-trversable@ package.

extra-source-files:
  README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/recursion-ninja/mono-traversable-keys

tested-with:
  GHC == 8.6.2
  GHC == 8.4.4
  GHC == 8.2.2
  GHC == 8.0.2
  GHC == 7.10.3
  
library

  build-depends:
      base                 >= 4.5     && < 5.0,
      bytestring           >= 0.9     && < 1.0,   
      containers           >= 0.3     && < 0.7,
      hashable             >= 1.2     && < 2.0,          
      keys                 >= 3       && < 4.0,          
      mono-traversable     >= 1       && < 2.0,          
      semigroups           >= 0.8.3.1 && < 1.0,
      text                 >= 0.11    && < 2.0,
      transformers         >= 0.2     && < 1.0,
      unordered-containers >= 0.2.4   && < 1.0,
      vector               >= 0.10    && < 1.0,
      vector-instances     >= 3.4     && < 4.0
                
  default-language:
      Haskell2010

  exposed-modules:
      Data.MonoTraversable.Keys

  ghc-options:
      -- Optimization flags
      -O2
      -fexpose-all-unfoldings
      -foptimal-applicative-do
      -fspecialize-aggressively
      -- Usability flags
      -fdiagnostics-color=always
      -fhide-source-paths
      -j
      -- Sanity check warnings
      -Wall
      -Wcompat
      -Wdodgy-foreign-imports
      -Wduplicate-exports
      -Wempty-enumerations
      -Widentities
      -Wincomplete-patterns
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-fields
      -Wmissing-home-modules
      -Wmissing-monadfail-instances
      -Wmissing-signatures
      -Wnoncanonical-monadfail-instances
      -Wnoncanonical-monad-instances
      -Wnoncanonical-monoid-instances
      -Woverflowed-literals
      -Woverlapping-patterns
      -Wredundant-constraints
      -Wsemigroup
      -Wtabs
      -Wunrecognised-warning-flags
      -Wunused-binds
      -Wunused-do-bind
      -Wunused-foralls
      -Wunused-imports
      -Wunused-matches
      -Wwrong-do-bind

  hs-source-dirs:
      src
